# ProjetL3FromScratch

./: Cargo.toml  README.md
src/: cli.rs  interface.rs  lib.rs  m2d.rs  main.rs  musicfile.rs  playlist.rs  scan.rs  search.rs  tag.rs  unittest.rs
src/output/: last_request.json  playlist.m3u  request_history.md
src/test/: stored_metadata.json  testjson.json
