[package]
name = "projet_l3_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
walkdir = "2.3.2"
id3 = "1.4.0"
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
markdown-gen = "1.2.1"